# wraact

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  PERFORMANCE_BASELINE.md  README.md  __init__.py  pyproject.toml
.github/workflows/: performance-regression.yml  unit-tests.yml
docs/: PERFORMANCE_ANALYSIS.md
src/wraact/: __init__.py  _constants.py  _functions.py  _tangent_lines.py
src/wraact/acthull/: __init__.py  _act.py  _elu.py  _leakyrelu.py  _maxpool.py  _relu.py  _relulike.py  _sigmoid.py  _sshape.py  _tanh.py  _utils.py
src/wraact/oney/: __init__.py  _act.py  _leakyrelu.py  _maxpool.py  _relu.py  _relulike.py  _sigmoid.py  _sshape.py
tests/: TEST_SUITE_SUMMARY.md  __init__.py  conftest.py
tests/fuzzing/: fuzz_polytopes.py
tests/fuzzing/edge_cases/: edge_case_0001_TypeError.json  edge_case_0002_TypeError.json  edge_case_0003_TypeError.json  edge_case_0004_TypeError.json  edge_case_0005_TypeError.json  edge_case_0006_TypeError.json  edge_case_0007_TypeError.json  edge_case_0008_TypeError.json  edge_case_0009_TypeError.json  edge_case_0010_TypeError.json  edge_case_0011_TypeError.json  edge_case_0012_TypeError.json  edge_case_0013_TypeError.json  edge_case_0014_TypeError.json  edge_case_0015_TypeError.json  edge_case_0016_TypeError.json  edge_case_0017_TypeError.json  edge_case_0018_TypeError.json  edge_case_0019_TypeError.json  edge_case_0020_TypeError.json  edge_case_0021_TypeError.json  edge_case_0022_TypeError.json  edge_case_0023_TypeError.json  edge_case_0024_TypeError.json  edge_case_0025_TypeError.json  edge_case_0026_TypeError.json  edge_case_0027_TypeError.json  edge_case_0028_TypeError.json  edge_case_0029_TypeError.json  edge_case_0030_TypeError.json  edge_case_0031_TypeError.json  edge_case_0032_TypeError.json  edge_case_0033_TypeError.json  edge_case_0034_TypeError.json  edge_case_0035_TypeError.json  edge_case_0036_TypeError.json  edge_case_0037_TypeError.json  edge_case_0038_TypeError.json  edge_case_0039_TypeError.json  edge_case_0040_TypeError.json  (+1056 more)
tests/test_basic/: __init__.py  test_acthull_advanced.py  test_acthull_advanced_features.py  test_acthull_core.py  test_acthull_exceptions.py  test_coverage_push_final.py  test_elu.py  test_exception_paths_geometric.py  test_final_push.py  test_functions.py  test_fuzzing_edge_cases.py  test_leakyrelu.py  test_maxpool.py  test_maxpool_dlp.py  test_maxpool_dlp_advanced.py  test_maxpool_extended.py  test_oney_act.py  test_oney_exception_recovery.py  test_oney_variants.py  test_relu.py  test_sigmoid.py  test_specific_coverage_gaps.py  test_sshape_activations.py  test_tangent_lines.py  test_tangent_lines_direct.py  test_tanh.py  test_utils.py
tests/test_integration/: __init__.py  test_hull_pipeline.py  test_polytope_conversion.py
tests/test_performance/: __init__.py  test_precision.py  test_runtime.py  test_scalability.py
tests/test_soundness/: __init__.py  test_constraint_satisfaction.py  test_edge_cases.py  test_overapproximation.py
tests/test_templates/: __init__.py  base_soundness_template.py
tools/: detect_perf_regression.py
wraact/: __init__.py  _acthull.py  _exceptions.py  _functions.py  _oney.py  _tangent_lines.py
wraact/acthull/: __init__.py  _act.py  _elu.py  _leakyrelu.py  _maxpool.py  _relu.py  _relulike.py  _sigmoid.py  _silu.py  _sshape.py  _tanh.py  _utils.py
wraact/oney/: __init__.py  _act.py  _elu.py  _leakyrelu.py  _maxpool.py  _relu.py  _relulike.py  _sigmoid.py  _sshape.py  _tanh.py
