[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wraact"
version = "0.1.0"
description = "Wrapper and abstraction utilities for neural network components"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zhongkui Ma", email = "zhongkui@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pycddlib==2.1.8.post1",
    "numpy==2.2.4",
    "numba==0.61.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.0",
    "mypy>=1.0",
    "pyright>=1.1.0",
]

[tool.setuptools]
packages = ["wraact"]

[tool.setuptools.package-data]
wraact = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.ruff.lint]
# Comprehensive rule set (matches main rover project)
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "PIE", "RET", "SIM", "TID",
    "A", "BLE", "C90", "FBT", "ICN", "ISC", "PGH", "Q", "RSE", "SLF",
    "TD", "D", "PERF", "FURB", "PT", "T10", "PTH", "INP", "NPY",
]

ignore = [
    "E501", "B008", "RET504", "SIM108", "FBT001", "FBT002",
    "D100", "D104", "TD002", "TD003",
    "E741",  # Allow ambiguous variable names (mathematical notation)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["INP001", "D103"]
"**/test/**" = ["INP001", "D103"]
"**/tests/**" = ["INP001", "D103"]

[tool.ruff.lint.isort]
known-first-party = ["wraact"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
no_implicit_optional = false

[tool.pyright]
include = ["wraact"]
exclude = ["tests", "venv", ".venv", "build", "dist"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[project.urls]
Homepage = "https://github.com/ZhongkuiMa/wraact"
Repository = "https://github.com/ZhongkuiMa/wraact.git"
Documentation = "https://github.com/ZhongkuiMa/wraact#readme"
